// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when providing all fields: errors 1`] = `Array []`;

exports[`should match snapshot when providing all fields: output 1`] = `
RepositoryReferenceEntity {
  "contributions": Array [],
  "contributors": Array [],
  "owner": "dzcode-io",
  "provider": "github",
  "repository": "leblad",
}
`;

exports[`should match snapshot when providing required fields only: errors 1`] = `Array []`;

exports[`should match snapshot when providing required fields only: output 1`] = `
RepositoryReferenceEntity {
  "owner": "dzcode-io",
  "provider": "github",
  "repository": "leblad",
}
`;

exports[`should show an error that matches snapshot when passing empty object: errors 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "provider must be a string",
    },
    "property": "provider",
    "target": RepositoryReferenceEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "owner must be a string",
    },
    "property": "owner",
    "target": RepositoryReferenceEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "repository must be a string",
    },
    "property": "repository",
    "target": RepositoryReferenceEntity {},
    "value": undefined,
  },
]
`;

exports[`should show an error that matches snapshot when passing empty object: output 1`] = `RepositoryReferenceEntity {}`;
